[tool.poetry]
name = "labrun"
version = "0.1.0"
description = "Network lab builder based on gNMI and YANG models"
authors = ["AntonMuravlev <antonforward@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Jinja2 = "^3.1.2"
pydantic = "^1.9.2"
pygnmi = "^0.8.9"
PyYAML = "^6.0"
setuptools = "^65.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
